fixed overflow

--- a/src/public/assets/css/composer.css
+++ b/src/public/assets/css/composer.css
@@ -15,9 +15,12 @@
     pointer-events: none;
     position: absolute
 }
-.nav-tabs .nav-link{
-    border-radius: 0 !important;;
+
+.nav-tabs .nav-link {
+    border-radius: 0 !important;
+    ;
 }
+
 .ProseMirror-gapcursor:after {
     content: "";
     display: block;
@@ -214,7 +217,7 @@
     outline: none;
     color: var(--dark-text);
     height: calc(100% - 226px);
-    overflow: hidden;
+    overflow: visible;
     font-size: 16px;
     letter-spacing: .3px;
     position: relative;
